// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Date Closed should filter and select closed suggestions based on name 1`] = `
[
  "Today",
  "Yesterday",
  "Past 7 days",
  "Past 30 days",
  "Past year",
]
`;

exports[`Date Created should filter and select created suggestions based on name 1`] = `
[
  "Today",
  "Yesterday",
  "Past 7 days",
  "Past 30 days",
  "Past year",
]
`;

exports[`Date Merged should filter and select suggestions based on name 1`] = `
[
  "Today",
  "Yesterday",
  "Past 7 days",
  "Past 30 days",
  "Past year",
]
`;

exports[`Date Updated should filter and select suggestions based on name 1`] = `
[
  "Today",
  "Yesterday",
  "Past 7 days",
  "Past 30 days",
  "Past year",
]
`;

exports[`Date should filter suggestions based on "before" operator and still retain operator on selection 1`] = `
[
  "Today",
  "Yesterday",
]
`;

exports[`Date should not filter suggestions based on "after" operator 1`] = `
[
  "Today",
  "Yesterday",
  "Past 7 days",
  "Past 30 days",
  "Past year",
]
`;

exports[`Date should render date suggestions 1`] = `
[
  "Today",
  "Yesterday",
  "Past 7 days",
  "Past 30 days",
  "Past year",
]
`;

exports[`Date should render dynamic value when selecting "Past 7 days" 1`] = `
[
  "Today",
  "Yesterday",
  "Past 7 days",
  "Past 30 days",
  "Past year",
]
`;

exports[`Date should render dynamic value when selecting "Past 30 days" 1`] = `
[
  "Today",
  "Yesterday",
  "Past 7 days",
  "Past 30 days",
  "Past year",
]
`;

exports[`Date should render dynamic value when selecting "Past year" 1`] = `
[
  "Today",
  "Yesterday",
  "Past 7 days",
  "Past 30 days",
  "Past year",
]
`;

exports[`Date should render dynamic value when selecting "Today" 1`] = `
[
  "Today",
  "Yesterday",
  "Past 7 days",
  "Past 30 days",
  "Past year",
]
`;

exports[`Date should render dynamic value when selecting "Yesterday" 1`] = `
[
  "Today",
  "Yesterday",
  "Past 7 days",
  "Past 30 days",
  "Past year",
]
`;

exports[`Date should render static value when selecting current day 1`] = `
[
  "Today",
  "Yesterday",
  "Past 7 days",
  "Past 30 days",
  "Past year",
]
`;
